--- a/views/event/edit.hbs
+++ b/views/event/edit.hbs
@@ -5,7 +5,7 @@
     <label>Description:</label>
     <input type="text" name="description" placeholder="Description" value="{{ event.description}}">
     <input type="date" name="date" placeholder="Date" value="{{ event.date}}">
-    <input type="checkbox" name="recurring" value="Recurring" value="{{ event.recurring}}"> Recurring<br>
+    <input type="checkbox" name="recurring" value="true" value="{{ event.recurring}}"> Recurring<br>
     <input type="String" name="language" placeholder="Language" value="{{ event.language}}">
     <label>Address</label>
     <input type="text" name="country" placeholder="Country" value="{{ event.location.country}}">
