--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,17 +1,16 @@
 <!-- views/auth/signup.hbs -->
 <h2>Signup</h2>
 
-<form action="/auth/signup" method="POST" id="form-container">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow">
+<form action="/signup" method="POST" id="form-container">
+  <label for="email">Email</label>
+  <input id="email" type="text" name="email" placeholder="jon@snow.com">
 
   <br><br>
 
   <label for="password">Password</label>
   <input id="password" type="password" name="password" placeholder="Your password">
-  <br>
-  {{#if message }}
-    <div class="error-message">{{ message }}</div>
+  <br> {{#if message }}
+  <div class="error-message">{{ message }}</div>
   {{/if}}
 
   <br><br>
@@ -20,6 +19,6 @@
 
   <p class="account-message">
     Do you already have an account?
-    <a href="/auth/login">Login</a>
+    <a href="/login">Login</a>
   </p>
 </form>
