added basic navbar with partial

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,42 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+  font-size: 14px;
+  font-family: "Telex", sans-serif;
+}
 
 a {
-  color: #00B7FF; }
+  color: #5533ff;
+}
+
+nav {
+  background-color: #5533ff;
+  height: 44px;
+  font-size: 0.9rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav .nav-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 20px;
+}
+nav .nav-container .nav-route-links {
+  margin-left: 40px;
+}
+nav a {
+  color: white;
+  padding: 0 20px;
+  text-decoration: none;
+}
+nav a:hover {
+  color: black;
+}
 
 /*# sourceMappingURL=style.css.map */
