--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,6 +4,8 @@
 <head>
   <title>{{title}}</title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link href="https://fonts.googleapis.com/css?family=Telex" rel="stylesheet">
+
 </head>
 
 <body>
