--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,17 +1,16 @@
+<h2>
+  Login</h2>
 
-<h2>Login</h2>
-
-<form action="/auth/login" method="POST" id="form-container">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow">
+<form action="/login" method="POST" id="form-container">
+  <label for="email">Email</label>
+  <input id="email" type="text" name="email" placeholder="jon@snow.com">
 
   <br><br>
 
   <label for="password">Password</label>
   <input id="password" type="password" name="password" placeholder="Your password">
-  <br>
-  {{#if message }}
-    <div class="error-message">{{ message }}</div>
+  <br> {{#if message }}
+  <div class="error-message">{{ message }}</div>
   {{/if}}
 
   <br><br>
@@ -20,6 +19,6 @@
 
   <p class="account-message">
     Don't have an account yet?
-    <a href="/auth/login">Signup</a>
+    <a href="/singup">Signup</a>
   </p>
 </form>
