--- a/views/profile/show.hbs
+++ b/views/profile/show.hbs
@@ -1,1 +1,1 @@
-<img src="/images/{{user.picture}}"> <br>Name: {{user.email}} <br>Age: {{user.age}}
+<img src="/images/{{user.picture}}"> <br>Name: {{user.name}} <br>Age: {{user.age}}
