--- a/views/profile/show.hbs
+++ b/views/profile/show.hbs
@@ -1,1 +1,5 @@
 <img src="/images/{{user.picture}}"> <br>Name: {{user.name}} <br>Age: {{user.age}}
+
+<br><br> {{#if user.ownProfile}}
+<a href="/profile/edit">Edit</a><br>
+<a href="/delete/">Delete Account</a><br> {{/if}}
