--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,12 +1,12 @@
 <nav>
-  <div class="nav-container">
-    <img src="" alt="logo">
+  <div class="nav-group left">
+    <img src="images/temp-logo.png" alt="logo">
     <div class="nav-route-links">
       <a href="">Find Events</a>
       <a href="">Find Tandems</a>
     </div>
   </div>
-  <div class="nav-container">
-    <a href="#">My profile</a>
+  <div class="nav-group right">
+    <img src="images/placeholderProfile.png" alt="profile">
   </div>
 </nav>
