--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,14 +4,17 @@
 <head>
   <title>{{title}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel='stylesheet' href='/stylesheets/style.css' />
   <link href="https://fonts.googleapis.com/css?family=Telex" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css" />
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js"></script>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 
 <body>
 
   {{{body}}}
-  <footer>Copyright</footer>
+  <footer></footer>
   <script src='/javascripts/script.js'></script>
 </body>
 
