--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -12,9 +12,9 @@
     </div>
     <div class="ui dropdown">
       <img id="nav-avatar" src="/images/placeholderProfile.png" alt="profile">
-      <div class="menu" ">
-        <div class="item " data-value="male ">My profile</div>
-        <div class="item " data-value="female ">Log out</div>
+      <div class="menu">
+        <div class="item" data-value="male">My profile</div>
+        <div class="item" data-value="female">Log out</div>
       </div>
     </div>
   </div>
