nav bar navigation to profile

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -13,10 +13,9 @@
     <div class="ui dropdown">
       <img id="nav-avatar" src="/images/placeholderProfile.png" alt="profile">
       <div class="menu">
-        <div class="item" data-value="male">My profile</div>
-        <div class="item" data-value="female">Log out</div>
+        <div class="item" data-value="profile">My profile</div>
+        <div class="item" data-value="logout">Log out</div>
       </div>
     </div>
   </div>
-
 </nav>
