--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,8 +12,9 @@
 </head>
 
 <body>
-
-  {{{body}}}
+  <div class="body-wrapper">
+    {{{body}}}
+  </div>
   <footer></footer>
   <script src='/javascripts/script.js'></script>
 </body>
