updated navbar links

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -2,8 +2,8 @@
   <div class="nav-group left">
     <img src="/images/temp-logo.png" alt="logo">
     <div class="nav-route-links">
-      <a href="">Find Events</a>
-      <a href="">Find Tandems</a>
+      <a href="/events/find">Find Events</a>
+      <a href="/tandems/find">Find Tandems</a>
     </div>
   </div>
   <div class="nav-group right">
