--- a/views/events/edit.hbs
+++ b/views/events/edit.hbs
@@ -1,5 +1,5 @@
 <h3>Edit event</h3>
-<form method="POST" action="/event/edit/{{ event._id}}">
+<form method="POST" action="/events/edit/{{ event._id}}">
     <label>Title:</label>
     <input type="text" name="title" placeholder="Name" value="{{ event.title}}">
     <label>Description:</label>
