--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,15 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  color: black; }
-
-body {
-  font-size: 14px;
-  font-family: "Telex", sans-serif; }
-
-a {
-  color: #5533ff; }
-
 nav {
   background-color: #5533ff;
   height: 44px;
@@ -56,6 +44,18 @@ nav {
     nav a {
       padding: 0 20px; } }
 
+* {
+  margin: 0;
+  padding: 0;
+  color: black; }
+
+body {
+  font-size: 14px;
+  font-family: "Telex", sans-serif; }
+
+a {
+  color: #5533ff; }
+
 form {
   display: flex;
   flex-direction: column;
@@ -67,7 +67,8 @@ form {
     form .form-group input,
     form .form-group textarea {
       padding: 5px 4px;
-      border-radius: 4px; }
+      border-radius: 4px;
+      resize: none; }
     form .form-group label {
       margin-top: 10px; }
   form #submit {
