--- a/views/events/index.hbs
+++ b/views/events/index.hbs
@@ -2,17 +2,17 @@
 <h3></h3>
 All events
 </h3>
-<a href="/event/new">Create new event</a>
+<a href="/events/new">Create new event</a>
 <ul>
     {{#each events}}
     <li>
-        <a href="/event/{{ this._id}}">
+        <a href="/events/{{ this._id}}">
             {{ this.title}}<span> - {{ this.description }}</span>
         </a>
         |
-        <a href="/event/edit/{{ this._id}}">Edit</a>
+        <a href="/events/edit/{{ this._id}}">Edit</a>
         |
-        <a href="/event/delete/{{ this._id}}">Delete</a>
+        <a href="/events/delete/{{ this._id}}">Delete</a>
     </li>
     {{/each }}
 </ul>
