--- a/views/events/new.hbs
+++ b/views/events/new.hbs
@@ -1,6 +1,6 @@
 {{> navbar name}}
 <h2>Create new Event</h2>
-<form method="POST" action="/event/new">
+<form method="POST" action="/events/new">
 
     <h3>Basic Info</h3>
     <div class="form-group">
