logo on navbar links to dashboard

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,6 +1,6 @@
 <nav>
   <div class="nav-group left">
-    <img src="/images/temp-logo.png" alt="logo">
+    <img id="logo" src="/images/temp-logo.png" alt="logo">
     <div class="nav-route-links">
       <a href="/events/find">Find Events</a>
       <a href="/tandems/find">Find Tandems</a>
