--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -11,11 +11,13 @@
 
             <h3>Basic Information</h3>
             <label>Name:</label>
-            <input type="text" name="name" placeholder="Name" value="{{ user.name}}">
+            <input type="text" name="name" placeholder="Name" value="{{ user.name}}" required>
+            <label>E-mail address:</label>
+            <input type="text" name="email" placeholder="E-mail address" value="{{ user.email}}" required>
             <label>Description:</label>
             <input type="text" name="description" placeholder="Description" value="{{ user.description}}">
             <label>Age:</label>
-            <input type="number" name="age" placeholder="Age" value="{{ user.age}}">
+            <input type="number" name="age" placeholder="Age" value="{{ user.age}}" required>
         </div>
         </br>
         <div class="form-group" type="hidden" hidden>
