layout for Profile page

--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -14,10 +14,10 @@
             <input type="text" name="name" placeholder="Name" value="{{ user.name}}" required>
             <label>E-mail address:</label>
             <input type="text" name="email" placeholder="E-mail address" value="{{ user.email}}" required>
-            <label>Description:</label>
-            <input type="text" name="description" placeholder="Description" value="{{ user.description}}">
             <label>Age:</label>
             <input type="number" name="age" placeholder="Age" value="{{ user.age}}" required>
+            <label>About me:</label>
+            <input type="text" name="description" placeholder="Something about me.." value="{{ user.description}}">
         </div>
         </br>
         <div class="form-group" type="hidden" hidden>
