--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,9 +44,40 @@ nav {
     nav a {
       padding: 0 20px; } }
 
+#content-wrapper-profile {
+  margin-top: 30px;
+  font-size: 1rem;
+  width: 80vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center; }
+  #content-wrapper-profile .column {
+    display: flex;
+    flex-direction: column;
+    margin: 0 10vw; }
+    #content-wrapper-profile .column #basic-info {
+      height: 250px;
+      margin: 20px 0; }
+  #content-wrapper-profile .row {
+    display: flex;
+    flex-direction: row; }
+
 #profile-pic-large {
-  width: 200px;
-  margin: 10px 0; }
+  height: 250px;
+  width: 240px;
+  margin: 20px 0; }
+
+.lang-list {
+  margin: 0 0 0 14px;
+  list-style: none; }
+
+.info-category {
+  font-weight: 800;
+  width: 180px; }
+
+#user-profile-name {
+  font-size: 2.4rem;
+  margin: 0 0 20px 0; }
 
 * {
   margin: 0;
@@ -60,6 +91,10 @@ body {
 a {
   color: #5533ff; }
 
+textarea {
+  padding-left: 4px;
+  resize: none; }
+
 form {
   display: flex;
   flex-direction: column;
@@ -71,8 +106,7 @@ form {
     form .form-group input,
     form .form-group textarea {
       padding: 5px 4px;
-      border-radius: 4px;
-      resize: none; }
+      border-radius: 4px; }
     form .form-group label {
       margin-top: 10px; }
 
