--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -25,6 +25,11 @@ a {
   color: $main-color-a;
 }
 
+textarea {
+  padding-left: 4px;
+  resize: none;
+}
+
 form {
   display: flex;
   flex-direction: column;
@@ -37,7 +42,6 @@ form {
     textarea {
       padding: 5px 4px;
       border-radius: 4px;
-      resize: none;
     }
     label {
       margin-top: 10px;
