textarea in edit profile

--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -17,7 +17,7 @@
             <label>Age:</label>
             <input type="number" name="age" placeholder="Age" value="{{ user.age}}" required>
             <label>About me:</label>
-            <input type="text" name="description" placeholder="Something about me.." value="{{ user.description}}">
+            <textarea rows="4" type="text" name="description" placeholder="Something about me.." value="{{ user.description}}"></textarea>
         </div>
         </br>
         <div class="form-group" type="hidden" hidden>
