--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -19,6 +19,6 @@
 
   <p class="account-message">
     Don't have an account yet?
-    <a href="/singup">Signup</a>
+    <a href="/signup">Signup</a>
   </p>
 </form>
