--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -1,4 +1,4 @@
-{{> navbar user.name}}
+{{> navbar user}}
 <script>const user = {{{ userString }}}</script>
 <script src='/javascripts/profile.js'></script>
 
