--- a/views/profile/show.hbs
+++ b/views/profile/show.hbs
@@ -1,9 +1,9 @@
-<script src='/javascripts/profile.js'></script> {{> navbar user.name}}
+<script src='/javascripts/profile.js'></script> {{> navbar user}}
 
 <div class="content-wrapper">
   <div id="content-wrapper-profile">
     <div class="column">
-      <img id="profile-pic-large" src="/images/{{user.picture}}">
+      <img id="profile-pic-large" src="{{user.picture}}">
       <section id="location">
         <hr>
 
