fixed error thrown on the profile page

--- a/views/profile/show.hbs
+++ b/views/profile/show.hbs
@@ -1,3 +1,4 @@
+<script>const user = null</script>
 <script src='/javascripts/profile.js'></script> {{> navbar user}}
 
 <div class="content-wrapper">
