layout of Edit Event page

--- a/views/events/new.hbs
+++ b/views/events/new.hbs
@@ -1,4 +1,4 @@
-{{> navbar name}}
+{{> navbar user}}
 <h2>Create new Event</h2>
 <form method="POST" action="/events/new" encType="multipart/form-data">
 
@@ -32,6 +32,4 @@
     </br>
     <input type="submit" name="" id="submit" class="success-btn">
     </br>
-
 </form>
-<div id="map"></div>
