--- a/views/events/edit.hbs
+++ b/views/events/edit.hbs
@@ -1,14 +1,35 @@
+{{> navbar user}}
 <h3>Edit event</h3>
-<form method="POST" action="/events/edit/{{ event._id}}">
-    <label>Title:</label>
-    <input type="text" name="title" placeholder="Name" value="{{ event.title}}">
-    <label>Description:</label>
-    <input type="text" name="description" placeholder="Description" value="{{ event.description}}">
-    <input type="date" name="date" placeholder="Date" value="{{ event.date}}">
-    <input type="String" name="language" placeholder="Language" value="{{ event.language}}">
-    <label>Address</label>
-    <input type="text" name="country" placeholder="Country" value="{{ event.location.country}}">
-    <input type="text" name="city" placeholder="City" value="{{ event.location.city}}">
-    <input type="text" name="street" placeholder="Street" value="{{ event.location.street}}">
-    <button type="submit" name="" id="submit">Edit</button>
+<form method="POST" action="/events/edit/{{event._id}}" encType="multipart/form-data">
+
+    <h3>Basic Info</h3>
+    <div class="form-group">
+        <label for="title">Event title</label>
+        <input type="text" id="title" name="title" placeholder="Title" value="{{ event.title}}">
+        <label for="description">Event description</label>
+        <textarea rows="4" type="text" id="description" name="description" placeholder="My event is about.." value="{{ event.description}}"></textarea>
+        <label for="date">Event date</label>
+        <input type="date" id="date" name="date" placeholder="Date" value="{{ event.date}}">
+        <label for="language">Event language</label>
+        <input type="text" id="languages-known" name="languages-known" placeholder="The language for this event.." value="{{ event.language}}">
+    </div>
+    </br>
+    <h3>Event Picture</h3>
+    <div class="form-group">
+        <label for="picture">Upload a Picture for your event</label>
+        <input type="file" name="picture">
+    </div>
+    </br>
+    <h3>Address</h3>
+    <div class="form-group">
+        <label for="country">Country</label>
+        <input type="text" id="country" name="country" placeholder="Country" value="{{ event.location.country}}">
+        <label for="city">City</label>
+        <input type="text" id="city" name="city" placeholder="City" value="{{ event.location.city}}">
+        <label for=" street ">Street</label>
+        <input type="text" id="street" name="street" placeholder="Street" value="{{ event.location.street}}">
+    </div>
+    </br>
+    <input type="submit" name=" " id="submit" class="success-btn">
+    </br>
 </form>
