--- a/views/events/show.hbs
+++ b/views/events/show.hbs
@@ -1,8 +1,11 @@
 <h3>{{ event.title}}</h3>
-{{ event.description}}<br> {{ event.language}}<br> <br> {{#if event.userAttending}}
+{{ event.description}}
+<br> {{ event.language}}
+<br> Date: {{event.date}}
+<br> Attendes: {{event.counter}}
+<br> {{#if event.userAttending}}
+<br><br>
 <a href="/events/unattend/{{event._id}}">Unattend Event</a><br> {{else}}
 <a href="/events/attend/{{event._id}}">Attend Event</a><br> {{/if}}
-
-
 <br>
-<a href="/events">Back to all events</a>
+<a href="/events">Back to my events</a>
