--- a/views/events/new.hbs
+++ b/views/events/new.hbs
@@ -10,8 +10,8 @@
         <textarea rows="4" type="text" id="description" name="description" placeholder="My event is about.."></textarea>
         <label for="date">Event date</label>
         <input type="date" id="date" name="date" placeholder="Date">
-        <label for="language">Event language</label>
-        <input type="text" id="languages-known" name="languages-known" placeholder="The language for this event..">
+        <label for="languageknown">Event language</label>
+        <input type="text" id="languageknown" name="languageknown" placeholder="The language for this event..">
     </div>
     </br>
     <h3>Event Picture</h3>
