implemented dropdown for language and country selection for event and profile pages

--- a/views/events/edit.hbs
+++ b/views/events/edit.hbs
@@ -1,4 +1,8 @@
 {{> navbar user}}
+<script>const user = {{{ userString }}}</script>
+<script src='/javascripts/data.js'></script>
+<script src='/javascripts/event.js'></script>
+
 <h3>Edit event</h3>
 <form method="POST" action="/events/edit/{{event._id}}" encType="multipart/form-data">
 
@@ -11,7 +15,12 @@
         <label for="date">Event date</label>
         <input type="date" id="date" name="date" placeholder="Date" value="{{ event.date}}">
         <label for="language">Event language</label>
-        <input type="text" id="languages-known" name="languages-known" placeholder="The language for this event.." value="{{ event.language}}">
+        <div class="ui dropdown">
+            <input type="hidden" name="language">
+            <div class="default text">Language</div>
+            <div class="menu" id="event-language">
+            </div>
+        </div>
     </div>
     </br>
     <h3>Event Picture</h3>
@@ -23,7 +32,12 @@
     <h3>Address</h3>
     <div class="form-group">
         <label for="country">Country</label>
-        <input type="text" id="country" name="country" placeholder="Country" value="{{ event.location.country}}">
+        <div class="ui dropdown">
+            <input type="hidden" name="country">
+            <div class="default text">Country</div>
+            <div class="menu" id="user-country">
+            </div>
+        </div>
         <label for="city">City</label>
         <input type="text" id="city" name="city" placeholder="City" value="{{ event.location.city}}">
         <label for=" street ">Street</label>
