--- a/views/profile/show.hbs
+++ b/views/profile/show.hbs
@@ -1,4 +1,5 @@
 <script>const user = null</script>
+<script src='/javascripts/data.js'></script>
 <script src='/javascripts/profile.js'></script> {{> navbar user}}
 
 <div class="content-wrapper">
