--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -79,6 +79,22 @@ nav {
   font-size: 2.4rem;
   margin: 0 0 20px 0; }
 
+.background-wrapper img {
+  background-position: center;
+  background-size: cover;
+  background-repeat: repeat;
+  width: 100vw;
+  height: 100vh; }
+
+.dashboard-wrapper {
+  margin-top: 44px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 20%;
+  right: 0; }
+
 * {
   margin: 0;
   padding: 0;
