--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,11 +1,21 @@
-<img src="{{picture}}">
-<h3>My Tandems</h3>
-<ul> {{#each tandems}}
-    <li>{{this.name}}</li>
-    {{/each}}
-</ul>
-<h3>My Event</h3>
-<ul> {{#each events}}
-    <li>{{this.title}}</li>
-    {{/each}}
-</ul>
+{{> navbar user}}
+<h1>Hello {{user.name}}</h1>
+<div class="background-wrapper"><img src="{{picture}}"></div>
+
+
+<div class="dashboard-wrapper">
+    <div class="container">
+        <h3>My Tandems</h3>
+        <ul> {{#each tandems}}
+            <li>{{this.name}}</li>
+            {{/each}}
+        </ul>
+    </div>
+    <div class="container">
+        <h3>My Event</h3>
+        <ul> {{#each events}}
+            <li>{{this.title}}</li>
+            {{/each}}
+        </ul>
+    </div>
+</div>
